Added custom agent link

--- a/cursos/espanol/deeplearning/LangChain_CustomAgent.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_CustomAgent.ipynb
@@ -28,36 +28,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "e33017cc-fa5d-4484-b88e-9d88055f0f2b",
       "metadata": {
-        "id": "e33017cc-fa5d-4484-b88e-9d88055f0f2b",
-        "outputId": "f1763e20-d002-49d1-ac79-1a5507c9feb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e33017cc-fa5d-4484-b88e-9d88055f0f2b",
+        "outputId": "f1763e20-d002-49d1-ac79-1a5507c9feb8"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/221.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m122.9/221.4 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m221.4/221.4 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.0/75.0 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "llmx 0.0.15a0 requires cohere, which is not installed.\n",
-            "llmx 0.0.15a0 requires tiktoken, which is not installed.\u001b[0m\u001b[31m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m809.1/809.1 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m15.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m189.1/189.1 kB\u001b[0m \u001b[31m14.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install openai --upgrade --quiet\n",
         "!pip install langchain --upgrade --quiet"
@@ -82,16 +62,16 @@
       "execution_count": 3,
       "id": "89c68f13-fd5a-46e2-a445-eb8fb7dffa3b",
       "metadata": {
-        "id": "89c68f13-fd5a-46e2-a445-eb8fb7dffa3b",
-        "outputId": "678570a0-ae2c-4036-fa94-1fea80d83035",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "89c68f13-fd5a-46e2-a445-eb8fb7dffa3b",
+        "outputId": "678570a0-ae2c-4036-fa94-1fea80d83035"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -109,6 +89,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "id": "AGZpav7k2ZS4",
+      "metadata": {
+        "id": "AGZpav7k2ZS4"
+      },
+      "outputs": [],
       "source": [
         "from langchain.agents import Tool, AgentExecutor, LLMSingleActionAgent, AgentOutputParser\n",
         "from langchain.prompts import StringPromptTemplate\n",
@@ -118,16 +104,16 @@
         "from typing import List, Union\n",
         "from langchain.schema import AgentAction, AgentFinish, OutputParserException\n",
         "import re"
-      ],
-      "metadata": {
-        "id": "AGZpav7k2ZS4"
-      },
-      "id": "AGZpav7k2ZS4",
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 25,
+      "id": "cAB4eLAA2cMH",
+      "metadata": {
+        "id": "cAB4eLAA2cMH"
+      },
+      "outputs": [],
       "source": [
         "# Define which tools the agent can use to answer user queries\n",
         "tools = [\n",
@@ -137,16 +123,16 @@
         "        description=\"util cuando quieres realizar operaciones matematicas\"\n",
         "    )\n",
         "]"
-      ],
-      "metadata": {
-        "id": "cAB4eLAA2cMH"
-      },
-      "id": "cAB4eLAA2cMH",
-      "execution_count": 25,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "id": "6qJazIwk2IpO",
+      "metadata": {
+        "id": "6qJazIwk2IpO"
+      },
+      "outputs": [],
       "source": [
         "# Set up the base template\n",
         "template = \"\"\"Contesta la siguiente pregunta lo mejor que puedas.\n",
@@ -163,16 +149,16 @@
         "Pregunta: {input}\n",
         "{agent_scratchpad}\n",
         "\"\"\""
-      ],
-      "metadata": {
-        "id": "6qJazIwk2IpO"
-      },
-      "id": "6qJazIwk2IpO",
-      "execution_count": 37,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
+      "id": "Gry-NeDM2Ir0",
+      "metadata": {
+        "id": "Gry-NeDM2Ir0"
+      },
+      "outputs": [],
       "source": [
         "# Set up a prompt template\n",
         "class CustomPromptTemplate(StringPromptTemplate):\n",
@@ -196,16 +182,16 @@
         "        # Create a list of tool names for the tools provided\n",
         "        kwargs[\"tool_names\"] = \", \".join([tool.name for tool in self.tools])\n",
         "        return self.template.format(**kwargs)"
-      ],
-      "metadata": {
-        "id": "Gry-NeDM2Ir0"
-      },
-      "id": "Gry-NeDM2Ir0",
-      "execution_count": 38,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "id": "kSGQLXtr2IuS",
+      "metadata": {
+        "id": "kSGQLXtr2IuS"
+      },
+      "outputs": [],
       "source": [
         "prompt = CustomPromptTemplate(\n",
         "    template=template,\n",
@@ -214,16 +200,16 @@
         "    # This includes the `intermediate_steps` variable because that is needed\n",
         "    input_variables=[\"input\", \"intermediate_steps\"]\n",
         ")"
-      ],
-      "metadata": {
-        "id": "kSGQLXtr2IuS"
-      },
-      "id": "kSGQLXtr2IuS",
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "id": "qLBi52eU2IxE",
+      "metadata": {
+        "id": "qLBi52eU2IxE"
+      },
+      "outputs": [],
       "source": [
         "class CustomOutputParser(AgentOutputParser):\n",
         "\n",
@@ -245,53 +231,53 @@
         "        action_input = match.group(2)\n",
         "        # Return the action and action input\n",
         "        return AgentAction(tool=action, tool_input=action_input.strip(\" \").strip('\"'), log=llm_output)"
-      ],
-      "metadata": {
-        "id": "qLBi52eU2IxE"
-      },
-      "id": "qLBi52eU2IxE",
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "output_parser = CustomOutputParser()"
-      ],
+      "execution_count": 41,
+      "id": "TSvCND0y2Izj",
       "metadata": {
         "id": "TSvCND0y2Izj"
       },
-      "id": "TSvCND0y2Izj",
-      "execution_count": 41,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "output_parser = CustomOutputParser()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = OpenAI(openai_api_key=api_key, temperature=0)"
-      ],
+      "execution_count": 42,
+      "id": "LkF5Ts-P2I1o",
       "metadata": {
         "id": "LkF5Ts-P2I1o"
       },
-      "id": "LkF5Ts-P2I1o",
-      "execution_count": 42,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm = OpenAI(openai_api_key=api_key, temperature=0)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# LLM chain consisting of the LLM and a prompt\n",
-        "llm_chain = LLMChain(llm=llm, prompt=prompt)"
-      ],
+      "execution_count": 43,
+      "id": "DUAszMyK3sdH",
       "metadata": {
         "id": "DUAszMyK3sdH"
       },
-      "id": "DUAszMyK3sdH",
-      "execution_count": 43,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# LLM chain consisting of the LLM and a prompt\n",
+        "llm_chain = LLMChain(llm=llm, prompt=prompt)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 44,
+      "id": "Vhspp_7L2I6C",
+      "metadata": {
+        "id": "Vhspp_7L2I6C"
+      },
+      "outputs": [],
       "source": [
         "tool_names = [tool.name for tool in tools]\n",
         "agent = LLMSingleActionAgent(\n",
@@ -300,127 +286,92 @@
         "    stop=[\"\\nObservacion:\"],\n",
         "    allowed_tools=tool_names\n",
         ")"
-      ],
-      "metadata": {
-        "id": "Vhspp_7L2I6C"
-      },
-      "id": "Vhspp_7L2I6C",
-      "execution_count": 44,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "agent_executor = AgentExecutor.from_agent_and_tools(agent=agent, tools=tools, verbose=True)"
-      ],
-      "metadata": {
-        "id": "-pznd2ZE3vGd"
-      },
-      "id": "-pznd2ZE3vGd",
-      "execution_count": 45,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "agent_executor.run(\"Cuantos dias tienen la suma de los dias de los siguientes dos meses febrero del 2005 y agosto del 2017?\")"
-      ],
-      "metadata": {
-        "id": "BcxdrVzW3vJA",
-        "outputId": "a94a4452-ee77-42f4-bac2-b1ff2cf27528",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 244
-        }
-      },
-      "id": "BcxdrVzW3vJA",
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "\n",
-            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-            "\u001b[32;1m\u001b[1;3mAnalisis: Para responder esta pregunta, necesitamos calcular el numero de dias de cada mes.\n",
-            "Accion: math\n",
-            "Entrada Accion: (31 + 31) + (31 + 30 + 31 + 30 + 31 + 31 + 30 + 31)\u001b[0m\n",
-            "\n",
-            "Observacion:\u001b[36;1m\u001b[1;3m{'question': '(31 + 31) + (31 + 30 + 31 + 30 + 31 + 31 + 30 + 31)', 'answer': 'Answer: 307'}\u001b[0m\n",
-            "\u001b[32;1m\u001b[1;3mAhora tenemos la respuesta de 307 dias.\n",
-            "Respuesta Final: La suma de los dias de los dos meses es de 307 dias.\u001b[0m\n",
-            "\n",
-            "\u001b[1m> Finished chain.\u001b[0m\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'La suma de los dias de los dos meses es de 307 dias.'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 49
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 45,
+      "id": "-pznd2ZE3vGd",
+      "metadata": {
+        "id": "-pznd2ZE3vGd"
+      },
+      "outputs": [],
+      "source": [
+        "agent_executor = AgentExecutor.from_agent_and_tools(agent=agent, tools=tools, verbose=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "BcxdrVzW3vJA",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 244
+        },
+        "id": "BcxdrVzW3vJA",
+        "outputId": "a94a4452-ee77-42f4-bac2-b1ff2cf27528"
+      },
+      "outputs": [],
+      "source": [
+        "agent_executor.run(\"Cuantos es tres mas IV?\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "q7OeYDTl3vL2",
       "metadata": {
         "id": "q7OeYDTl3vL2"
       },
-      "id": "q7OeYDTl3vL2",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "yhFtgVAz3vN8",
       "metadata": {
         "id": "yhFtgVAz3vN8"
       },
-      "id": "yhFtgVAz3vN8",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "HHsWYIz53vQP",
       "metadata": {
         "id": "HHsWYIz53vQP"
       },
-      "id": "HHsWYIz53vQP",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "A2JWrhxP2I8s",
       "metadata": {
         "id": "A2JWrhxP2I8s"
       },
-      "id": "A2JWrhxP2I8s",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "M6YWZXUs2I_M",
       "metadata": {
         "id": "M6YWZXUs2I_M"
       },
-      "id": "M6YWZXUs2I_M",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -437,9 +388,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.7"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
