Bug fixes langchain rag

--- a/cursos/espanol/deeplearning/LangChain_RAG.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_RAG.ipynb
@@ -77,6 +77,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c552e2df-68b6-4b9f-ba88-1d92a3c107a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install \"langchain[docarray]\" --upgrade --quiet\n",
+    "!pip install tiktoken --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3dc17a98-670c-497b-92a3-734854e6392e",
    "metadata": {},
    "outputs": [],
@@ -94,7 +105,7 @@
    "source": [
     "vectorstore = DocArrayInMemorySearch.from_texts(\n",
     "    [\"harrison worked at kensho\", \"bears like to eat honey\"],\n",
-    "    embedding=OpenAIEmbeddings()\n",
+    "    embedding=OpenAIEmbeddings(openai_api_key=api_key)\n",
     ")\n",
     "retriever = vectorstore.as_retriever()"
    ]
@@ -182,7 +193,7 @@
     "prompt = ChatPromptTemplate.from_template(\n",
     "    \"tell me a short joke about {topic}\"\n",
     ")\n",
-    "model = ChatOpenAI()\n",
+    "model = ChatOpenAI(openai_api_key=api_key)\n",
     "output_parser = StrOutputParser()"
    ]
   },
@@ -204,6 +215,18 @@
    "outputs": [],
    "source": [
     "chain.invoke({\"topic\": \"bears\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5348597f-024a-41e1-ac9d-8946f075aec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Using this context: {context}. Answer the following question: {question} \"\n",
+    ")"
    ]
   },
   {
@@ -244,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install lark --upgrade --quiet"
+    "!pip install chromadb --quiet"
    ]
   },
   {
@@ -266,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding = OpenAIEmbeddings()\n",
+    "embedding = OpenAIEmbeddings(openai_api_key=api_key)\n",
     "vectordb = Chroma(\n",
     "    persist_directory=persist_directory,\n",
     "    embedding_function=embedding\n",
