--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -172,7 +172,7 @@
     "calificacion: Que calificacion se le asigno al restaurante?\\\n",
     "Si no se encuentra la informacion devolver -1.\n",
     "\n",
-    "texto: {texto}\n",
+    "texto: {text}\n",
     "\n",
     "{format_instructions}\n",
     "\"\"\"\n",
