Added Blog section

--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -13,7 +13,19 @@
     "\n",
     "Esto parece simple y tonto pero es el sueño de cualquier programador. Es como si fuera posible hacer una busqueda en google y luego poder hacer web scrapping del mejor resultado pero de manera mucho mas sencilla.\n",
     "\n",
-    "LangChain es una API que nos permite realizar estas consultas a los LLM y poder parsear el resultado de forma mas simple. Veamos la diferencia entre consultar directamente a OpenAI como hicimos en la unidad anterior y hacerlo utilizando LangChain:"
+    "LangChain es una libreria que nos permite trabajar con LLMs de manera simple y poder cambiar de modelos de LLM y de Bases de Datos Vectoriales facilmente.\n",
+    "\n",
+    "![langchain](img/langchain.gif)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f08f30-ac7f-490c-a69c-f8cc3eeced61",
+   "metadata": {},
+   "source": [
+    "## LangChain Prompting\n",
+    "\n",
+    "Empecemos con un ejemplo simple viendo la diferencia entre consultar directamente a OpenAI como hicimos en la unidad anterior y hacerlo utilizando LangChain:"
    ]
   },
   {
