Translated english to spanish

--- a/cursos/espanol/deeplearning/LangChain_RAG.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_RAG.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "vectorstore = DocArrayInMemorySearch.from_texts(\n",
-    "    [\"harrison worked at kensho\", \"bears like to eat honey\"],\n",
+    "    [\"Juan es cientifico de datos\", \"Las abejas hacen miel\"],\n",
     "    embedding=OpenAIEmbeddings(openai_api_key=api_key)\n",
     ")\n",
     "retriever = vectorstore.as_retriever()"
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever.get_relevant_documents(\"where did harrison work?\")"
+    "retriever.get_relevant_documents(\"A que se dedica Juan?\")"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever.get_relevant_documents(\"what do bears like to eat\")"
+    "retriever.get_relevant_documents(\"Que hacen las abejas?\")"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chain.invoke({\"question\": \"where did harrison work?\"})"
+    "chain.invoke({\"question\": \"A que se dedica Juan?\"})"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "prompt = ChatPromptTemplate.from_template(\n",
-    "    \"tell me a short joke about {topic}\"\n",
+    "    \"Dime una broma sobre {topic}\"\n",
     ")\n",
     "model = ChatOpenAI(openai_api_key=api_key)\n",
     "output_parser = StrOutputParser()"
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chain.invoke({\"topic\": \"bears\"})"
+    "chain.invoke({\"topic\": \"abejas\"})"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "prompt = ChatPromptTemplate.from_template(\n",
-    "    \"Using this context: {context}. Answer the following question: {question} \"\n",
+    "    \"Usando la siguiente informacion: {context}. Responde esta pregunta: {question} \"\n",
     ")"
    ]
   },
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chain.invoke({\"question\": \"where did harrison work?\"})"
+    "chain.invoke({\"question\": \"A que se dedica Juan?\"})"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install chromadb --quiet"
+    "!pip install chromadb --upgrade --quiet"
    ]
   },
   {
@@ -315,9 +315,9 @@
    "outputs": [],
    "source": [
     "texts = [\n",
-    "    \"\"\"The Amanita phalloides has a large and imposing epigeous (aboveground) fruiting body (basidiocarp).\"\"\",\n",
-    "    \"\"\"A mushroom with a large fruiting body is the Amanita phalloides. Some varieties are all-white.\"\"\",\n",
-    "    \"\"\"A. phalloides, a.k.a Death Cap, is one of the most poisonous of all known mushrooms.\"\"\",\n",
+    "    \"\"\"France\"\"\",\n",
+    "    \"\"\"Spain\"\"\",\n",
+    "    \"\"\"Germany\"\"\",\n",
     "]"
    ]
   },
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"Tell me about all-white mushrooms with large fruiting bodies\""
+    "question = \"Madrid\""
    ]
   },
   {
