Added video for gpt from scratch

--- a/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
@@ -7,25 +7,13 @@
    "source": [
     "# Transformer Architecture\n",
     "\n",
-    "[Deep NN course](https://fleuret.org/dlc/)\n",
-    "\n",
     "[Visualization](https://bbycroft.net/llm)\n",
+    "\n",
+    "[Implement a transformer from scratch with pytorch](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
     "\n",
     "[Implement a transformer from scratch with keras](https://keras.io/guides/keras_nlp/transformer_pretraining/)\n",
     "\n",
-    "[Implement a transformer from scratch with pytorch](https://mohitkpandey.github.io/posts/2020/11/trfm-code/)\n",
-    "\n",
-    "[Visualizing How Vision Transformer works](https://keras.io/examples/vision/probing_vits/)\n",
-    "\n",
-    "[Transformers from Scratch 1](https://e2eml.school/transformers.html)\n",
-    "\n",
-    "[Transformers from Scratch 2](https://peterbloem.nl/blog/transformers)\n",
-    "\n",
-    "[Transformers from Scratch 3](https://www.kaggle.com/code/arunmohan003/transformer-from-scratch-using-pytorch)\n",
-    "\n",
-    "[Transformers from Scratch 4](https://github.com/Khaliladib11/Transformer-from-scratch)\n",
-    "\n",
-    "[Transformers from Scratch 5](https://towardsdatascience.com/build-your-own-transformer-from-scratch-using-pytorch-84c850470dcb)"
+    "[Deep NN course](https://fleuret.org/dlc/)"
    ]
   },
   {
