Updated numeros aleatorios

--- a/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb
+++ b/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb
@@ -71,9 +71,9 @@
    "id": "e6081b69-1b38-4300-9423-c9d6cd713c4f",
    "metadata": {},
    "source": [
-    "**IMPORTANTE:** los numeros aleatorios generados por las computadoras no son totalmente aleatorios sino que son pseudoaleatorios. Esto significa que **dado un numero inicial llamado semilla** un generador de numeros pseudoaleatorios genera siempre la misma **secuencia de numeros que tienen la misma probabilidad de salir**. \n",
+    "**IMPORTANTE:** los numeros aleatorios generados por las computadoras no son totalmente aleatorios sino que son pseudoaleatorios. Esto significa que **dado un numero inicial llamado semilla** un generador de numeros pseudoaleatorios **genera siempre la misma secuencia de numeros** pero **cada numero generado tiene la misma probabilidad de salir** que cualquiera de los otros. \n",
     "\n",
-    "Si bien no son totalmente aleatorios, porque sabiendo el numero inicial (numero semilla) sabremos los numeros generados, estos numeros tienen la misma probabilidad de salir y esto es exactamente lo que necesitamos.\n",
+    "Si bien no son totalmente aleatorios, porque sabiendo el numero inicial (numero semilla) sabremos los numeros generados, estos numeros tienen la misma probabilidad de salir y esto es exactamente lo que necesitamos. De hecho poder generar la misma secuencia a partir de una semilla inicial va a ser muy util para poder repetir experimentos aleatorios. \n",
     "\n",
     "Elijamos una semilla (seed en ingles) y veamos lo que sucede.\n",
     "\n",
@@ -719,6 +719,19 @@
     "        n = random.randrange(0,100)\n",
     "        counter += 1\n",
     "    return counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b6d9d3-ab1a-44b3-9db7-cc10416b2375",
+   "metadata": {},
+   "source": [
+    "## Material Avanzado\n",
+    "\n",
+    "Para aquellos que quieran saber como funciona la funcion que genera los numeros pseudoaleatorios hay muchas formas pero quizas la mas simple es la siguiente:\n",
+    "\n",
+    "- [Como generar numeros con la misma probabilidad de salir (distribucion uniforme)](https://es.wikipedia.org/wiki/Generador_lineal_congruencial)\n",
+    "- [Como modificar la distribucion uniforme de los numeros a una distribucion normal](https://es.wikipedia.org/wiki/M%C3%A9todo_de_Box-Muller)"
    ]
   },
   {
