--- a/cursos/espanol/programacion/E6_iterators_generators.ipynb
+++ b/cursos/espanol/programacion/E6_iterators_generators.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Los iteradores son un tipo especial de objeto que tienen dos metodos: **\\_\\_iter\\_\\_** y **\\_\\_next\\_\\_** \n",
     "\n",
-    "**\\_\\_iter\\_\\_**: retorna el objeto\n",
+    "**\\_\\_iter\\_\\_**: retorna el objeto iterador\n",
     "\n",
     "**\\_\\_next\\_\\_**: cada vez que es llamada calcula y retorna el siguiente elemento a iterar hasta que llegue a una condicion de fin\n",
     "\n",
@@ -84,7 +84,7 @@
    "id": "c8885817-5d0a-4cf8-8a8f-ccbc6471ea30",
    "metadata": {},
    "source": [
-    "Como podemos observar el bucle for se encarga de llamar al metodo **\\_\\_next\\_\\_** de un iterador hasta que recibe un error de tipo StopIteration. Si no recibe este tipo de error seguira obteniendo nuevos elementos infinitamente."
+    "Como podemos observar el bucle for se encarga de llamar al metodo **\\_\\_next\\_\\_** de un iterador hasta que recibe una exepcion de tipo StopIteration. Si no recibe este tipo de error seguira obteniendo nuevos elementos infinitamente."
    ]
   },
   {
