--- a/cursos/espanol/datascience/0_intro.ipynb
+++ b/cursos/espanol/datascience/0_intro.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Ciencia de Datos\n",
     "\n",
-    "En este curso veremos las herramientas creadas por la Ciencia de Datos que nos permiten obtener predicciones e informacion util a partir de una cantidad de datos que podemos recopilar de internet u otras fuentes de datos."
+    "En este curso veremos las herramientas creadas por la Ciencia de Datos que nos permiten obtener predicciones e informacion util a partir de una cantidad de datos que podemos recopilar de internet u otras fuentes de datos.\n",
+    "\n",
+    "Existen varios metodos o culturas para crear modelos a traves de estadisticas y probabilidades, quizas los mas conocidos y utilizados son el metodo frecuentista, el bayesiano y el machine learning. En este curso solo nos enfocaremos en el metodo de Machine Learning (ML) ya que es el mas practico y de mayor crecimiento y adopcion en los ultimos años."
    ]
   },
   {
