--- a/cursos/espanol/datascience/0_intro.ipynb
+++ b/cursos/espanol/datascience/0_intro.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# Ciencia de Datos\n",
     "\n",
-    "En este curso veremos las herramientas creadas por la Ciencia de Datos que nos permiten obtener predicciones e informacion util a partir de una cantidad de datos que podemos recopilar de internet u otras fuentes de datos.\n",
-    "\n",
-    "Existen varios metodos o culturas para crear modelos a traves de estadisticas y probabilidades, quizas los mas conocidos y utilizados son el metodo frecuentista, el bayesiano y el machine learning. En este curso solo nos enfocaremos en el metodo de Machine Learning (ML) ya que es el mas practico y de mayor crecimiento y adopcion en los ultimos años."
+    "En este curso veremos las herramientas creadas por la Ciencia de Datos que nos permiten obtener predicciones e informacion util a partir de una cantidad de datos que podemos recopilar de internet u otras fuentes de datos."
    ]
   },
   {
@@ -160,7 +158,9 @@
     "7. Medir que tan buenas son las predicciones de la caja negra en ambas tablas (Entrenamiento y Test)\n",
     "8. Si las predicciones son lo suficientemente buenas utilizar esta caja negra entrenada para predecir nuevos valores\n",
     "\n",
-    "**En las siguientes unidades veremos como implementarlo paso a paso**"
+    "**En las siguientes unidades veremos como implementarlo paso a paso**\n",
+    "\n",
+    "Existen varios metodos o culturas para crear modelos a traves de estadisticas y probabilidades, quizas los mas conocidos y utilizados son el metodo frecuentista, el bayesiano y el machine learning. En este curso solo nos enfocaremos en el metodo de Machine Learning (ML) ya que es el mas practico y de mayor crecimiento y adopcion en los ultimos años."
    ]
   },
   {
