Added interesting links

--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -13,7 +13,7 @@
    "id": "e73d6047-a060-490b-ab48-786e6de2ef8e",
    "metadata": {},
    "source": [
-    "Antes de utilizar una caja negra y hacer cualquier prediccion es importante entender el problema, cual es el objetivo y que significado tienen los datos. El primer paso es adentrarse en el problema y entederlo con el mayor detalle posible, hablar con los clientes, con expertos y con toda persona que nos pueda ayudar a entender mejor cual es la problematica a solucionar."
+    "Antes de utilizar una caja negra y hacer cualquier prediccion es importante entender el problema, cual es el objetivo y que significado tienen los datos. El primer paso es adentrarse en el problema y entederlo con el mayor detalle posible, buscar y etiquetar nuestros propios datos, hablar con los clientes, con expertos y con toda persona que nos pueda ayudar a entender mejor cual es la problematica a solucionar."
    ]
   },
   {
@@ -21,7 +21,9 @@
    "id": "48149491-163e-4f79-a52a-91e027f85bf5",
    "metadata": {},
    "source": [
-    "Una vez hecho esto podemos utilizar nuestro conocimiento de programacion para generar graficos y estadisticas que nos permitan descubrir informacion extra que puede ser interesante. En esta unidad veremos las siguientes herramientas que disponemos con python para analizar datos:\n",
+    "Una vez hecho esto podemos utilizar nuestro conocimiento de programacion para generar graficos y estadisticas que nos permitan descubrir informacion extra que puede ser interesante. \n",
+    "\n",
+    "En esta unidad veremos las siguientes herramientas que disponemos con python para analizar datos:\n",
     "- Graficos con Seaborn y Matplotlib\n",
     "- Limpieza y manipulacion de datos con Pandas y Numpy\n",
     "- Profiling: https://github.com/fbdesignpro/sweetviz, https://github.com/ydataai/ydata-profiling, \n",
