--- a/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "[Visualization](https://bbycroft.net/llm)\n",
     "\n",
+    "[Self Attention Layer Explanation](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
+    "\n",
     "[Implement a transformer from scratch with pytorch](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
     "\n",
     "[Implement a transformer from scratch with keras](https://keras.io/guides/keras_nlp/transformer_pretraining/)\n",
