--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -246,6 +246,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83aba3f0-4822-4084-bdf4-748c391fdc70",
+   "metadata": {},
+   "source": [
+    "# Otras librerias open source interesantes:\n",
+    "- [Supervision para tareas de computer vision](https://github.com/roboflow/supervision?tab=readme-ov-file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94244657-107f-4e36-9d08-88ba57823f71",
    "metadata": {},
    "source": [
