--- a/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb
+++ b/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb
@@ -562,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Funcion incorporada .lower() convierte la string a minuscula"
+    "#### Funcion incorporada .upper() convierte la string a mayuscula"
    ]
   },
   {
